gobmkida/c3/store_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1295:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[i] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1308:25: error: use of undeclared identifier 'byte_9C688C'
v22 = ( unsigned __int8)byte_9C688C[j]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1315:4: error: use of undeclared identifier 'byte_9C688D'
|| byte_9C688D[j] != 3 && *( ( _BYTE *)&v91 + j + 5) == 1) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1325:25: error: use of undeclared identifier 'byte_9C688C'
v24 = ( unsigned __int8)byte_9C688C[k]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1332:4: error: use of undeclared identifier 'byte_9C688D'
|| byte_9C688D[k] != 3 && *( ( _BYTE *)&v91 + k + 5) == 2) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1342:25: error: use of undeclared identifier 'byte_9C688C'
v26 = ( unsigned __int8)byte_9C688C[m]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1349:4: error: use of undeclared identifier 'byte_9C688D'
|| byte_9C688D[m] != 3 && *( ( _BYTE *)&v91 + m + 5) == 3) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1359:25: error: use of undeclared identifier 'byte_9C688C'
v28 = ( unsigned __int8)byte_9C688C[n]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/engine/persistent.c:1366:4: error: use of undeclared identifier 'byte_9C688D'
|| byte_9C688D[n] != 3 && *( ( _BYTE *)&v91 + n + 5) == 4) ) 
   ^
9 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/store_persistent_owl_cache/src/obj/1/persistent.o] Error 1
